--- a/TMS_Backend/src/main/resources/application.properties
+++ b/TMS_Backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tsm_db?createDatabaseIfNotExis
 spring.datasource.username=Rudy
 spring.datasource.password=Rudrant@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+jwt.secret=3ge9MvNsXqpbq2iU8M8n8n2C4V0x9zMWMzNfMzNn/3M=
 
 # JPA Settings
 spring.jpa.hibernate.ddl-auto=update
