--- a/TMS_Backend/src/main/resources/application.properties
+++ b/TMS_Backend/src/main/resources/application.properties
@@ -1,16 +1,6 @@
 spring.application.name=TMS
 
-#MySQL Config
-spring.datasource.url=jdbc:mysql://localhost:3306/tsm_db?createDatabaseIfNotExist=true
-spring.datasource.username=Rudy
-spring.datasource.password=Rudrant@1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-jwt.secret=3ge9MvNsXqpbq2iU8M8n8n2C4V0x9zMWMzNfMzNn/3M=
-
-# JPA Settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+#Profile Name
+spring.profiles.active=${ENV:dev}
 
 
