application-prod file changes

--- a/TMS_Backend/src/main/resources/application-prod.properties
+++ b/TMS_Backend/src/main/resources/application-prod.properties
@@ -6,3 +6,9 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 frontend.url=${FRONTEND_URL}
 jwt.secret=${JWT_SECRET}
+
+# JPA Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
