--- a/TMS_FrontEnd/package.json
+++ b/TMS_FrontEnd/package.json
@@ -30,7 +30,9 @@
     "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
+    "@ngx-env/builder": "^19.0.4",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.0.3",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
